@@ -19,6 +19,7 @@ for version 0.0.15:
 +++	factorize top and retr in common.lua since in the raw case they are 
 		always the same (done in libero and tin)
 	add squirrel to manual
+	add linuxgazette.net aggregator domain to manual
 	aggiungi nel manuale che se uno lascia i messaggi usl server si 
 		genera molto traffico, con una stima decente.
 	http://liberopops.diludovico.it/index.php?showtopic=859&st=0&#entry4412
