@@ -1,3 +1,4 @@
+- added linuxgazette.net aggregator domains
 08/08/2004 0.0.14 fix release
 - fixed gmail login procedure
 - fixed some stuff in cookie.lua
